@@ -3,3 +3,5 @@ SUBDIRS = man po src
 ACLOCAL_AMFLAGS = -I m4
 
 EXTRA_DIST = build-aux/config.rpath
+
+dist_doc_DATA = NEWS README
