@@ -1,3 +1,1 @@
-man_MANS = dvdbackup.1
-
-EXTRA_DIST = $(man_MANS)
+dist_man_MANS = dvdbackup.1
