@@ -7,6 +7,7 @@ dvdbackup 0.1.1-svn
 		* Added new command line option -V, --version: Display version
 		  information and exit.
 		* More robust read error handling.
+		* Added man page to distribution.
 
 	Changes:
 		* Switched license to GPLv3 or later
